<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    android:layout_marginBottom="5dp"
    android:layout_marginHorizontal="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/videoImg"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_video_player"
        android:contentDescription="@string/image"
        app:shapeAppearanceOverlay="@style/curved"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingHorizontal="5dp">

        <TextView
            android:id="@+id/videoName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/video_name"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/folderName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/folder_name"
            android:gravity="center_vertical"
            android:maxLines="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:text="@string/duration"
        android:gravity="center"/>

</LinearLayout>